--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   syncfusion_flutter_datepicker: ^21.1.39
   horizontal_data_table: ^4.1.5
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
