--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   syncfusion_flutter_datepicker: ^21.1.39
   horizontal_data_table: ^4.1.5
+  datepicker_dropdown: ^0.0.7+4
   convex_bottom_bar: ^3.2.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
