--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^21.1.39
   horizontal_data_table: ^4.1.5
   convex_bottom_bar: ^3.2.0
+  from_to_time_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
